Added People Page -- Needs to be modernized

--- a/people/index.html
+++ b/people/index.html
@@ -1,5 +1,8 @@
 ---
-layout: blog
+layout: page
 title: People
-subtitle: Our Current Lab Member
+subtitle: Our Current Lab Members
+sponsors: my_sponsors
+show_sidebar: false
 ---
+
