--- a/publications/index.html
+++ b/publications/index.html
@@ -1,5 +1,5 @@
 ---
 layout: blog
 title: Publications
-subtitle: This is what our lab is currently working on
+subtitle: Featured Publications
 ---
